; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_traps_32.c_do_memaccess_unaligned.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_traps_32.c_do_memaccess_unaligned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32, i64, i32* }
%struct.TYPE_3__ = type { i64, i8*, i32, i64, i32 }

@PSR_PS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [50 x i8] c"KERNEL MNA at pc %08lx npc %08lx called by %08lx\0A\00", align 1
@UREG_RETPC = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [6 x i8] c"BOGUS\00", align 1
@SIGBUS = common dso_local global i32 0, align 4
@BUS_ADRALN = common dso_local global i32 0, align 4
@current = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_memaccess_unaligned(%struct.pt_regs* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.pt_regs*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_3__, align 8
  store %struct.pt_regs* %0, %struct.pt_regs** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load %struct.pt_regs*, %struct.pt_regs** %5, align 8
  %11 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @PSR_PS, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %4
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = load %struct.pt_regs*, %struct.pt_regs** %5, align 8
  %20 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %19, i32 0, i32 2
  %21 = load i32*, i32** %20, align 8
  %22 = load i64, i64* @UREG_RETPC, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i64 %17, i64 %18, i32 %24)
  %26 = load %struct.pt_regs*, %struct.pt_regs** %5, align 8
  %27 = call i32 @die_if_kernel(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), %struct.pt_regs* %26)
  br label %28

28:                                               ; preds = %16, %4
  %29 = load i32, i32* @SIGBUS, align 4
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 4
  store i32 %29, i32* %30, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 3
  store i64 0, i64* %31, align 8
  %32 = load i32, i32* @BUS_ADRALN, align 4
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  store i32 %32, i32* %33, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  store i8* null, i8** %34, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i64 0, i64* %35, align 8
  %36 = load i32, i32* @SIGBUS, align 4
  %37 = load i32, i32* @current, align 4
  %38 = call i32 @send_sig_info(i32 %36, %struct.TYPE_3__* %9, i32 %37)
  ret void
}

declare dso_local i32 @printk(i8*, ...) #1

declare dso_local i32 @die_if_kernel(i8*, %struct.pt_regs*) #1

declare dso_local i32 @send_sig_info(i32, %struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
